# Ampel-LSST-archive

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  renovate.json  start_test_server.sh
.github/workflows/: cd.yaml  frontend.yaml  main.yml
alembic/: env.py
alembic/versions/: 0586c1303f03_add_search_result_storage.py  05b7ccfc1440_object_table.py  0dd96901dfe1_tsm_system_rows.py  2157b31be5c5_earthdistance.py
ampel/lsst/archive/: ArchiveDB.py  ArchiveDBClient.py  avro.py  db.py  healpix.py  healpix_cone_search.py  iceberg_utils.py  models.py  provision.py  queries.py  schema_utils.py  skymap.py  update.py  updater.py
ampel/lsst/archive/alert_packet/: LsstV9_0Alert.py  __init__.py
ampel/lsst/archive/server/: alert.py  app.py  colormaps.py  cutouts.py  db.py  display.py  iceberg.py  metrics.py  models.py  s3.py  settings.py  skymap.py  streams.py  tokens.py  valkey.py
ampel/lsst/t0/: ArchiveUpdater.py
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/.github/workflows/: cd.yaml
frontend/src/: App.js
frontend/src/Components/: AlertView.js  AlertsByNight.js  CutoutPlots.js  DIAObjectView.js  Nights.js  TemplateView.js
src/: App.css  App.js
src/Components/: AlertView.js  CutoutPlots.js  DIAObjectView.js  SSObjectView.js
tests/: conftest.py  fixtures.py  test_archivedb.py  test_healpix_search.py  test_persistence.py  test_server.py
tests/test-data/: quary_dict.json
tests/test-data/initdb/archive/: 17_statement_timeout.sql  24_archive_schema_4.02.sql
