[project]
name = "ampel-lsst-archive"
version = "0.0.1-alpha.0"
description = "LSST alert archive for the Ampel system"
requires-python = ">=3.12, <4"
authors = [
    { name = "Jakob van Santen", email = "jakob.van.santen@desy.de" },
]
maintainers = [
    { name = "Jakob van Santen", email = "jakob.van.santen@desy.de" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "zstd-asgi (>=1.0,<2.0)",
    "colorspacious (>=1.1.2,<2.0.0)",
    "astropy-healpix (>=1.1.3,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "hishel (>=1.1.9,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "duckdb (>=1.4.4,<2.0.0)"
]

[project.optional-dependencies]
image = ["scipy (>=1.17.0,<2.0.0)"]
pyiceberg = ["pyiceberg (>=0.11.0,<0.12.0)"]
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.13,<2.0)",
    "scipy-stubs (>=1.17.0.2,<2.0.0.0)",
    "pyarrow-stubs (>=20.0.0.20251215,<21.0.0.0)",
]

[tool.poetry]
packages = [
    {include = "ampel"},
]
exclude = ["ampel/py.typed"]

[project.urls]
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelAstro/Ampel-LSST-archive"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals -r a -v --integration"
filterwarnings = [
    "error",
    "default::pytest.PytestUnraisableExceptionWarning",
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated:DeprecationWarning:botocore",
]

[tool.mypy]
namespace_packages = true
packages = [
  "ampel"
]
exclude = [
    "ampel/lsst/archive/server/tokens.py",
    "ampel/lsst/archive/server/streams.py",
]
plugins = [
  "pydantic.mypy",
]
show_error_codes = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "astropy_healpix.*",
  "zstd_asgi",
  "plotly.*",
  "colorspacious",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "ampel/lsst/archive/server/tokens.py",
    "ampel/lsst/archive/server/streams.py",
    "tests/test_server.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "DTZ",  # datetimez
    "T20",  # print
    "PT",   # pytest-style
    "RET",  # return
    "SLF",  # self
    "SIM",  # simplify
    "ARG",  # unused-arguments
    "PL",   # pylint
    "PERF", # perflint
    "RUF",  # ruff
]
ignore = [
    "PLR09", # too many (arguments|branches)
    "E501",  # line too long (handled by ruff format)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "RUF018",  # assignment in assert is just fine in tests
    "SLF001",  # allow private member access
    "T201",    # allow print()
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
